# rs_workdays

./: .gitignore  Cargo.toml  readme.md
source/: holiday_api.csv  holidays.csv
src/: error.rs  extract.rs  global.rs  intraday.rs  lib.rs  main.rs  request_holidays.rs  scrape_holidays.rs  workdays.rs
temp/: main.rs
temp/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  rs_workdays_check-checkpoint.ipynb
tests/: test_base.rs  test_global.rs  test_workdays.rs
