[package]
name = "rs_workdays"
version = "0.1.1"
authors = ["deepgreenAN <asami73dgreen63@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rs_workdays"

[features]
default = ["reqwest"]
wasm = ["chrono/wasmbind", "reqwest-wasm"]

[dependencies]
csv = "1.1"
chrono = "0.4"
once_cell = "1.8.0"
thiserror = "1.0.0"
anyhow = "1.0.51"
reqwest = { version = "0.11", features = ["blocking"], optional=true}
reqwest-wasm = {version = "0.11", features = ["blocking"], optional=true}
encoding_rs = "0.8"
