[package]
name = "rs_workdays"
version = "0.1.1"
authors = ["deepgreenAN <asami73dgreen63@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rs_workdays"

[features]
#default = []
default = ["source"]
#default = ["wasm"]
#default = ["wasm", "wasm_source"]
source = ["reqwest", "csv", "encoding_rs"]
wasm = ["chrono/wasmbind"]
wasm_source = ["reqwest-wasm", "csv", "encoding_rs"]

[dependencies]
csv = {version = "1.1", optional = true}
chrono = "0.4"
once_cell = "1.8.0"
thiserror = "1.0.0"
anyhow = "1.0.51"
reqwest = { version = "0.11", features = ["blocking"], optional = true}
reqwest-wasm = { version = "0.11", optional = true}
encoding_rs = { version = "0.8", optional = true}
